# Satellite-Downlink-Simulator

./: .gitignore  CMakeLists.txt  README.md  build.bat  create_dirs.js  imgui.ini  main.cpp  mkdir.js  package_release.bat
config/: antennas.json  satellites.json  sim.json
config/.cache/: celestrak_norad_25544.tle  celestrak_top_active.tle
docs/: throughput_report.typ
src/: orbit.cpp  orbit.h  scenario.cpp  scenario.h
